--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "events",
-  "version": "0.0.0",
-  "description": "Proxies to cloudfront",
-  "main": "proxy.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "NetEngine",
-  "license": "BSD-2-Clause",
-  "devDependencies": {
-    "superagent": "~0.18.0",
-    "express": "~4.4.3"
-  }
+ "name": "redhat-proxy-events",
+ "version": "0.0.1",
+ "description": "Proxies to cloudfront",
+ "main": "proxy.js",
+ "author": "NetEngine",
+ "license": "BSD-2-Clause",
+ "dependencies": {
+   "superagent": "~0.18.0",
+   "express": "~4.4.3"
+ }
 }
