Adds bangkok to proxy

--- a/config.json
+++ b/config.json
@@ -9,5 +9,6 @@
   "/forum/seoul": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/173/original/latest_index.html",
   "/forum/hong-kong": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/177/original/latest_index.html",
   "/forum/kuala-lumpur": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/181/original/latest_index.html",
-  "/forum/beijing": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/185/original/latest_index.html"
+  "/forum/beijing": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/185/original/latest_index.html",
+  "/forum/bangkok": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/008/360/original/latest_index.html"
 }
