--- a/config.json
+++ b/config.json
@@ -12,8 +12,11 @@
   "/forum/beijing": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/185/original/latest_index.html",
   "/forum/bangkok": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/008/360/original/latest_index.html",
   "/sko-staging/latam": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/010/071/original/latest_index.html",
+  "/sko/latam": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/010/071/original/latest_index.html",
   "/sko-staging/apac": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/009/290/original/latest_index.html",
+  "/sko/apac": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/009/290/original/latest_index.html",
   "/sko-staging/na": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/009/990/original/latest_index.html",
+  "/sko/na": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/009/990/original/latest_index.html",
   "/sko-staging/emea": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/009/254/original/latest_index.html",
   "/sko/emea": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/009/254/original/latest_index.html"
 }
