Updates to handle relative resources
Adds new forum landing pages

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "/forum/singapore": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/002/719/original/latest_index.html",
   "/forum/mumbai": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/153/original/latest_index.html",
   "/forum/bangalore": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/157/original/latest_index.html",
-  "/forum/tokyo": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/161/original/latest_index.html",
+  "/forum/tokyo": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/001/361/original/latest_index.html",
   "/forum/jakarta": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/165/original/latest_index.html",
   "/forum/taipei": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/169/original/latest_index.html",
   "/forum/seoul": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/173/original/latest_index.html",
@@ -11,6 +11,10 @@
   "/forum/kuala-lumpur": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/181/original/latest_index.html",
   "/forum/beijing": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/185/original/latest_index.html",
   "/forum/bangkok": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/008/360/original/latest_index.html",
+  "/forum/santiago": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/117/original/latest_index.html",
+  "/forum/buenos-aires": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/093/original/latest_index.html",
+  "/forum/bogota": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/120/original/latest_index.html",
+  "/forum/sao-paulo": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/122/original/latest_index.html",
   "/sko-staging/latam": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/010/071/original/latest_index.html",
   "/sko/latam": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/010/071/original/latest_index.html",
   "/sko-staging/apac": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/009/290/original/latest_index.html",
