--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
   "/forum/santiago": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/117/original/latest_index.html",
   "/forum/buenos-aires": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/093/original/latest_index.html",
   "/forum/bogota": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/120/original/latest_index.html",
-  "/forum/mexico": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/124/original/latest_index.htm",
+  "/forum/mexico": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/124/original/latest_index.html",
   "/forum/sao-paulo": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/122/original/latest_index.html",
   "/sko-staging/latam": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/010/071/original/latest_index.html",
   "/sko/latam": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/010/071/original/latest_index.html",
