--- a/config.json
+++ b/config.json
@@ -1,21 +1,24 @@
 {
   "/forum": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/002/474/original/latest_hub.html",
-  "/forum/singapore": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/002/719/original/latest_index.html",
-  "/forum/mumbai": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/153/original/latest_index.html",
-  "/forum/bangalore": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/157/original/latest_index.html",
+  "/forum/singapore": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/111/original/latest_index.html",
+  "/forum/mumbai": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/107/original/latest_index.html",
+  "/forum/bangalore": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/097/original/latest_index.html",
+  "/forum/bengaluru": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/097/original/latest_index.html",
   "/forum/tokyo": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/001/361/original/latest_index.html",
-  "/forum/jakarta": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/165/original/latest_index.html",
-  "/forum/taipei": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/169/original/latest_index.html",
-  "/forum/seoul": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/173/original/latest_index.html",
-  "/forum/hong-kong": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/177/original/latest_index.html",
-  "/forum/kuala-lumpur": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/181/original/latest_index.html",
-  "/forum/beijing": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/003/185/original/latest_index.html",
+  "/forum/jakarta": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/095/original/latest_index.html",
+  "/forum/taipei": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/113/original/latest_index.html",
+  "/forum/seoul": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/099/original/latest_index.html",
+  "/forum/hong-kong": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/103/original/latest_index.html",
+  "/forum/kuala-lumpur": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/105/original/latest_index.html",
+  "/forum/beijing": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/101/original/latest_index.html",
   "/forum/bangkok": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/008/360/original/latest_index.html",
   "/forum/santiago": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/117/original/latest_index.html",
   "/forum/buenos-aires": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/093/original/latest_index.html",
+  "/forum/buenosaires": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/093/original/latest_index.html",
   "/forum/bogota": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/120/original/latest_index.html",
   "/forum/mexico": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/124/original/latest_index.html",
   "/forum/sao-paulo": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/122/original/latest_index.html",
+  "/forum/saopaulo": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/122/original/latest_index.html",
   "/sko-staging/latam": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/010/071/original/latest_index.html",
   "/sko/latam": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/010/071/original/latest_index.html",
   "/sko-staging/apac": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/009/290/original/latest_index.html",
