--- a/config.json
+++ b/config.json
@@ -11,6 +11,7 @@
   "/forum/hong-kong": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/103/original/latest_index.html",
   "/forum/kuala-lumpur": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/105/original/latest_index.html",
   "/forum/beijing": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/101/original/latest_index.html",
+  "/forum/shenzhen": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/109/original/latest_index.html",
   "/forum/bangkok": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/008/360/original/latest_index.html",
   "/forum/santiago": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/117/original/latest_index.html",
   "/forum/buenos-aires": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/093/original/latest_index.html",
