Adds camelcase BuenosAires

--- a/config.json
+++ b/config.json
@@ -16,6 +16,7 @@
   "/forum/santiago": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/117/original/latest_index.html",
   "/forum/buenos-aires": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/093/original/latest_index.html",
   "/forum/buenosaires": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/093/original/latest_index.html",
+  "/forum/BuenosAires": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/093/original/latest_index.html",
   "/forum/bogota": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/120/original/latest_index.html",
   "/forum/mexico": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/124/original/latest_index.html",
   "/forum/sao-paulo": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/122/original/latest_index.html",
