Adding Manila forum proxy.

--- a/config.json
+++ b/config.json
@@ -17,6 +17,7 @@
   "/forum/buenos-aires": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/093/original/latest_index.html",
   "/forum/buenosaires": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/093/original/latest_index.html",
   "/forum/BuenosAires": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/093/original/latest_index.html",
+  "/forum/manila": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/004/975/original/latest_index.html",
   "/forum/bogota": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/120/original/latest_index.html",
   "/forum/mexico": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/124/original/latest_index.html",
   "/forum/sao-paulo": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/122/original/latest_index.html",
