--- a/config.json
+++ b/config.json
@@ -23,12 +23,12 @@
   "/forum/sao-paulo": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/122/original/latest_index.html",
   "/forum/saopaulo": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/000/122/original/latest_index.html",
   "/sko-staging/latam": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/010/071/original/latest_index.html",
-  "/sko/latam": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/010/071/original/latest_index.html",
+  "/sko/latam": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/006/315/original/latest_index.html?1450075444",
   "/sko-staging/apac": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/009/290/original/latest_index.html",
-  "/sko/apac": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/009/290/original/latest_index.html",
+  "/sko/apac": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/006/324/original/latest_index.html?1450075408",
   "/sko-staging/na": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/009/990/original/latest_index.html",
-  "/sko/na": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/009/990/original/latest_index.html",
+  "/sko/na": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/006/327/original/latest_index.html?1450075472",
   "/sko-staging/emea": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/009/254/original/latest_index.html",
-  "/sko/emea": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/009/254/original/latest_index.html",
+  "/sko/emea": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/006/313/original/latest_index.html?1450075372",
   "/rhte": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/014/102/original/latest_index.html"
 }
