--- a/config.json
+++ b/config.json
@@ -30,5 +30,5 @@
   "/sko/na": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/006/327/original/latest_index.html?1450075472",
   "/sko-staging/emea": "http://d3s84xo5cmutkt.cloudfront.net/renders/attachments/000/009/254/original/latest_index.html",
   "/sko/emea": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/006/313/original/latest_index.html?1450075372",
-  "/rhte": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/014/975/original/latest_index.html?1462272670"
+  "/rhte/apac": "https://outfit-v2-exports-production.s3.amazonaws.com/exports/attachments/000/014/975/original/latest_index.html?1462319826"
 }
